--- a/style/style.css
+++ b/style/style.css
@@ -1,42 +1,34 @@
 
 body {
     background:  gray;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 
-#full-board {
+
+#row1, #row2, #row3 {
     outline: black solid 2px;
-    height: 200px;
-    width: 200px;
+    height: 18vh;
+    text-align: center;
+
 }
 
-
-.one.columns {
+.one.columns, .two.columns, .three.columns, .four.columns, .five.columns, .six.columns {
     background: red;
-    height: 200px;
-    width: 200px;
     outline: black solid 2px;
-}
-
-.two.columns {
-    background: green;
-    height: 200px;
-    width: 200px;
-}
-.three.columns {
-    background: green;
-    height: 200px;
-    width: 200px;
+    display: inline;
+    margin: .5em;
+    height: 80%;
+    width: 10%;
+    text-align: center;
 }
 
 
-#row1 {
-    outline: black solid 2px;
+.hide, .guess, .return-text {
+    display: inline;
+    border: black solid 2px;
 }
 
-#row2 {
-    outline: black solid 2px;
-}
+.board {
 
-#row3 {
-    outline: black solid 2px;
 }
