--- a/style/style.css
+++ b/style/style.css
@@ -3,17 +3,18 @@ body {
     background:  gray;
     margin-left: 2em;
     margin-right: 2em;
+    /*display: inline-block*/
 }
 
 
 #row1, #row2, #row3 {
     outline: black solid 2px;
-    height: 18vh;
+    height: 12vh;
     text-align: center;
 
 }
 
-.one.columns, .two.columns, .three.columns, .four.columns, .five.columns, .six.columns {
+.one.columns, .two.columns, .three.columns, .four.columns, .five.columns, .six.columns , .seven.columns, .eight.columns {
     background: red;
     outline: black solid 2px;
     display: inline;
@@ -27,8 +28,11 @@ body {
 .hide, .guess, .return-text {
     display: inline;
     border: black solid 2px;
+    height: 30vh;
+    width: 30vw;
 }
 
-.board {
-
+.scoreboard {
+    height: 30vh;
+    display: inline;
 }
